add: download files, folder creation, support for C#